fixed overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -612,6 +612,11 @@ footer {
 }
 
 @media screen and (max-width: 575px) {
+  html,
+  body {
+    width: 100%;
+    overflow-x: hidden;
+  }
   header {
     background-color: black;
     padding: 15px;
@@ -662,8 +667,58 @@ footer {
     margin: 0 30px;
   }
 
+  .bio-title {
+    color: white;
+    background-color: rgba(0, 0, 0, 0);
+    padding-top: 26px;
+    border-bottom: white solid 1px;
+    text-align: center;
+  }
+
+  .bio-title h2 {
+    text-align: center;
+    font-size: 45px;
+  }
+
+  .round-me {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    margin: 0px;
+  }
+
+  .bio-title-2 {
+    color: white;
+    background-color: rgba(0, 0, 0, 0);
+    padding-top: 15px;
+    border-bottom: white solid 1px;
+  }
+
+  .bio-title-2 h2 {
+    text-align: center;
+    font-size: 45px;
+  }
+
+  .round-me-2 {
+    border-radius: 50%;
+    width: 100%;
+    height: 200px;
+    margin: 0px;
+  }
+
   .filler {
     height: 200px;
+  }
+
+  .form-input {
+    border: 1px solid blue;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: rgb(6, 71, 6);
+    width: 300px;
+    margin-bottom: 15px;
+    border-radius: 3px;
   }
 
   footer {
